updated client, fixed dashboard, setup tickets for the last stretch

--- a/client/src/style/components/_header.scss
+++ b/client/src/style/components/_header.scss
@@ -108,6 +108,36 @@
             color: $text;
             font-size: 0.9rem;
             font-weight: 500;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 5px;
+
+            .user-icon {
+                width: 14px;
+                height: 14px;
+                background-color: $primary;
+                border-radius: 50vw;
+                display: block;
+            }
+        }
+    }
+
+    .cart {
+        padding: 6px 12px;
+        color: $primary;
+        border: none;
+        border-radius: 7px;
+        font-size: 1.5rem;
+        transition: all 0.3s ease;
+        cursor: pointer;
+        text-decoration: none;
+        display: inline-block;
+        text-align: center;
+
+        &:hover {
+            color: $secondary;
+            scale: 1.05;
         }
     }
 
